--- a/packages/starter/react-ui-starter/package.json
+++ b/packages/starter/react-ui-starter/package.json
@@ -30,6 +30,7 @@
         "@solana/wallet-adapter-react-ui": "workspace:^",
         "@solana/wallet-adapter-wallets": "workspace:^",
         "@solana/web3.js": "^1.77.3",
+        "framer-motion": "^11.5.6",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     },
