--- a/packages/core/react/package.json
+++ b/packages/core/react/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "@solana/wallet-adapter-react",
-    "version": "0.15.35",
+    "name": "walletkit-react",
+    "version": "0.1.1",
     "author": "Solana Maintainers <maintainers@solana.foundation>",
-    "repository": "https://github.com/anza-xyz/wallet-adapter",
+    "repository": "https://github.com/stevesarmiento/WalletKit",
     "license": "Apache-2.0",
     "publishConfig": {
         "access": "public"
@@ -38,7 +38,7 @@
     },
     "dependencies": {
         "@solana-mobile/wallet-adapter-mobile": "^2.0.0",
-        "@solana/wallet-adapter-base": "workspace:^",
+        "@solana/wallet-adapter-base": "^0.9.23",
         "@solana/wallet-standard-wallet-adapter-react": "^1.1.0"
     },
     "devDependencies": {
