--- a/packages/ui/react-ui/package.json
+++ b/packages/ui/react-ui/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "@solana/wallet-adapter-react-ui",
-    "version": "0.9.35",
+    "name": "walletkit-react-ui",
+    "version": "0.1.4",
     "author": "Solana Maintainers <maintainers@solana.foundation>",
-    "repository": "https://github.com/anza-xyz/wallet-adapter",
+    "repository": "https://github.com/stevesarmiento/WalletKit",
     "license": "Apache-2.0",
     "publishConfig": {
         "access": "public"
@@ -43,9 +43,9 @@
         "react-dom": "*"
     },
     "dependencies": {
-        "@solana/wallet-adapter-base": "workspace:^",
-        "@solana/wallet-adapter-base-ui": "workspace:^",
-        "@solana/wallet-adapter-react": "workspace:^"
+        "@solana/wallet-adapter-base": "^0.9.22",
+        "walletkit-react": "^0.1.1",
+        "walletkit-react-ui": "^0.1.1"
     },
     "devDependencies": {
         "@solana/web3.js": "^1.77.3",
