--- a/packages/ui/react-ui/package.json
+++ b/packages/ui/react-ui/package.json
@@ -1,7 +1,7 @@
 {
     "name": "walletkit-react-ui",
-    "version": "0.1.6",
-    "author": "Solana Maintainers <maintainers@solana.foundation>",
+    "version": "0.1.7",
+    "author": "WalletKit Maintainers <sarmiento.steven@gmail.com>",
     "repository": "https://github.com/stevesarmiento/WalletKit",
     "license": "Apache-2.0",
     "publishConfig": {
